--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".asc">
+        </activity>
+
+        <activity android:name=".tran">
+        </activity>
     </application>
 
 </manifest>
